@@ -7,9 +7,9 @@ public class BOJ1092 {
         BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
         int n = Integer.parseInt(br.readLine());
         StringTokenizer st = new StringTokenizer(br.readLine());
-        Integer[] crains = new Integer[n];
+        Integer[] crane = new Integer[n];
         for (int i = 0; i < n; i++) {
-            crains[i] = Integer.parseInt(st.nextToken());
+            crane[i] = Integer.parseInt(st.nextToken());
         }
 
         int m = Integer.parseInt(br.readLine());
@@ -18,10 +18,10 @@ public class BOJ1092 {
         for (int i = 0; i < m; i++) {
             boxes.add(Integer.parseInt(st.nextToken()));
         }
-        Arrays.sort(crains,Comparator.reverseOrder());
+        Arrays.sort(crane,Comparator.reverseOrder());
         boxes.sort(Collections.reverseOrder());
 
-        if (boxes.get(0)>crains[0]) {
+        if (boxes.getFirst()>crane[0]) {
             System.out.println("-1");
             return;
         }
@@ -32,7 +32,7 @@ public class BOJ1092 {
 
             while (c<n){
                 if (b==boxes.size()) break;
-                else if (crains[c]>=boxes.get(b)) {
+                else if (crane[c]>=boxes.get(b)) {
                     boxes.remove(b);
                     c++;
                 } else b++;
